--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="logo" href="./index.html">Web<span class="logotype">Studio</span></a>
                 <ul class="page-navigation">
                     <li>
-                        <a class="nav nav-link-list" href="./index.html">Studio</a>
+                        <a class="nav nav-inline nav-link-list" href="./index.html">Studio</a>
                     </li>
                     <li>
                         <a class="nav nav-link-list" href="">Portfolio</a>
@@ -54,21 +54,46 @@
     <section id="benefits" class="section">
         <div class="container container-benefits">
             <h2 class="visually-hidden">Our Benefits</h2>
+            <ul class="benefits benefits-icon">
+                <li class="icon-item">
+                    <svg class="logo-icon" width="64" height="64" aria-label="icon antenna">
+                        <use href="./images/icon/symbol-defs.svg#icon-antenna"></use>
+                    </svg>
+                </li>
+                <li class="icon-item">
+                    <svg class="logo-icon" width="64" height="64" aria-label="icon clock">
+                        <use href="./images/icon/symbol-defs.svg#icon-clock"></use>
+                    </svg>
+                </li>
+                <li class="icon-item">
+                    <svg class="logo-icon" width="64" height="64" aria-label="icon diagram">
+                        <use href="./images/icon/symbol-defs.svg#icon-diagram"></use>
+                    </svg>
+                </li>
+                <li class="icon-item">
+                    <svg class="logo-icon" width="64" height="64" aria-label="icon astronaut">
+                        <use href="./images/icon/symbol-defs.svg#icon-astronaut"></use>
+                    </svg>
+                </li>
+            </ul>
             <ul class="container-benefits-list">
                 <li class="container-benefits-item">
                     <h3 class="benefits-list">Strategy</h3>
                     <p class="benefits-list-item">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution. </p>
+                        problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="container-benefits-item">
+
                     <h3 class="benefits-list">Punctuality</h3>
                     <p class="benefits-list-item">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="container-benefits-item">
+
                     <h3 class="benefits-list">Diligence</h3>
                     <p class="benefits-list-item">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="container-benefits-item">
+
                     <h3 class="benefits-list">Technologies</h3>
                     <p class="benefits-list-item">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -89,6 +114,28 @@
                         <h3 class="name-list">Mark Guerrero</h3>
                         <p class="name-list-item">Product Designer</p>
                     </div>
+<ul class="social-link">
+    <li class="social-link-item">
+        <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
+            <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+        </svg>
+    </li>
+    <li class="social-link-item">
+        <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
+            <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+        </svg>
+    </li>
+    <li class="social-link-item">
+        <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
+            <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+        </svg>
+    </li>
+    <li class="social-link-item">
+        <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
+            <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+        </svg>
+    </li>
+</ul>
                 </li>
                 <li class="name">
                     <img src="./images/tom.jpg"
@@ -99,6 +146,28 @@
                         <h3 class="name-list">Tom Ford</h3>
                         <p class="name-list-item">Frontend Developer</p>
                     </div>
+                    <ul class="social-link">
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+                            </svg>
+                        </li>
+                    </ul>
                 </li>
                 <li class="name">
                     <img src="./images/camilla.jpg"
@@ -109,6 +178,28 @@
                         <h3 class="name-list">Camila Garcia</h3>
                         <p class="name-list-item">Marketing</p>
                     </div>
+                    <ul class="social-link">
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+                            </svg>
+                        </li>
+                    </ul>
                 </li>
                 <li class="name">
                     <img src="./images/daniel.jpg"
@@ -119,6 +210,28 @@
                         <h3 class="name-list">Daniel Wilson</h3>
                         <p class="name-list-item">UI Designer</p>
                     </div>
+                    <ul class="social-link">
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+                            </svg>
+                        </li>
+                        <li class="social-link-item">
+                            <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
+                                <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+                            </svg>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -128,60 +241,96 @@
         <h2 class="portfolio">Our Portfolio</h2>
             <ul class="container-portfolio">
                 <li class="container-portfolio-list">
-                    <img src="./images/bank-app.jpg" 
-                    alt="Banking App"
-                    width="360"
-                    height="300">
+                    <div class="overlay-list">
+                        <img src="./images/bank-app.jpg" 
+                        alt="Banking App"
+                        width="360"
+                        height="300"/>
+                        <div class="overlay">
+                            <p class="overlay-item">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
+                    </div>
                     <div class="container-text">
                         <h3  class="portfolio-list">Banking App</h3>
                         <p class="portfolio-list-item">App</p>
                     </div>
                 </li>
                 <li class="container-portfolio-list">
-                    <img src="./images/qr.jpg" 
-                    alt="Qr Code"
-                    width="360"
-                    height="300">
+                    <div class="overlay-list">
+                        <img src="./images/qr.jpg" 
+                        alt="Qr Code"
+                        width="360"
+                        height="300">
+                        <div class="overlay">
+                            <p class="overlay-item">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
+                    </div>
                     <div class="container-text">
                         <h3 class="portfolio-list">Cashless Payment</h3>
                         <p class="portfolio-list-item">Marketing</p>
                     </div>
                 </li>
                 <li class="container-portfolio-list">
-                    <img src="./images/laptop.jpg" 
-                    alt="Laptop"
-                    width="360"
-                    height="300">
+                    <div class="overlay-list">
+                        <img src="./images/laptop.jpg" 
+                        alt="Laptop"
+                        width="360"
+                        height="300">  
+                        <div class="overlay">
+                            <p class="overlay-item">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div> 
+                    </div>
                     <div class="container-text">
                         <h3 class="portfolio-list">Meditation App</h3>
                         <p class="portfolio-list-item">App</p>
                     </div>
                 </li>
                 <li class="container-portfolio-list">
-                    <img src="./images/car.jpg" 
-                    alt="Car"
-                    width="360"
-                    height="300">
+                    <div class="overlay-list">
+                        <img src="./images/car.jpg" 
+                        alt="Car"
+                        width="360"
+                        height="300">
+                        <div class="overlay">
+                            <p class="overlay-item">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div> 
+                    </div>
                     <div class="container-text">
                         <h3  class="portfolio-list">Taxi Service</h3>
                         <p class="portfolio-list-item">Marketing</p>
                     </div>
                 </li>
                 <li class="container-portfolio-list">
-                    <img src="./images/phone.jpg" 
-                    alt="Phone"
-                    width="360"
-                    height="300">
+                    <div class="overlay-list">
+                        <img src="./images/phone.jpg" 
+                        alt="Phone"
+                        width="360"
+                        height="300">
+                        <div class="overlay">
+                            <p class="overlay-item">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div> 
+                    </div>
                     <div class="container-text">
                         <h3  class="portfolio-list">Screen Illustrations</h3>
                         <p class="portfolio-list-item">Design</p>
                     </div>
                 </li>
                 <li class="container-portfolio-list">
-                    <img src="./images/girl.jpg" 
-                    alt="Girl"
-                    width="360"
-                    height="300">
+                    <div class="overlay-list">
+                        <img src="./images/girl.jpg" 
+                        alt="Girl"
+                        width="360"
+                        height="300">
+                        <div class="overlay">
+                            <p class="overlay-item">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div> 
+                    </div>
                     <div class="container-text">
                         <h3  class="portfolio-list">Online Courses</h3>
                         <p class="portfolio-list-item">Marketing</p>
@@ -193,12 +342,37 @@
 </main>
 <!-- Footer -->
 <footer class="footer">
-    <div class="container container-footer">
+    <div class="container">
         <a href="./index.html" class="logo-footer">Web<span class="logotype-footer">Studio</span></a>
         <p class="footer-item">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
         </p>
+        <div class="footer-link-item">
+            <h3 class="footer-link">Social media</h3>
+            <ul class="footer-list">
+                <li class="footer-icon">
+                    <svg class="logo-footer" width="24" height="24" aria-label="logo instagram">
+                        <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+                    </svg>
+                </li>
+                <li class="footer-icon">
+                    <svg class="logo-footer" width="24" height="24" aria-label="logo twitter">
+                        <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+                    </svg>
+                </li>
+                <li class="footer-icon">
+                    <svg class="logo-footer" width="24" height="24" aria-label="logo facebook">
+                        <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+                    </svg>
+                </li>
+                <li class="footer-icon">
+                    <svg class="logo-footer" width="24" height="24" aria-label="logo linkedin">
+                        <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+                    </svg>
+                </li>
+            </ul>
+        </div>
     </div>
   </footer>
 </body>
