--- a/index.html
+++ b/index.html
@@ -54,46 +54,41 @@
     <section id="benefits" class="section">
         <div class="container container-benefits">
             <h2 class="visually-hidden">Our Benefits</h2>
-            <ul class="benefits benefits-icon">
-                <li class="icon-item">
-                    <svg class="logo-icon" width="64" height="64" aria-label="icon antenna">
-                        <use href="./images/icon/symbol-defs.svg#icon-antenna"></use>
-                    </svg>
-                </li>
-                <li class="icon-item">
-                    <svg class="logo-icon" width="64" height="64" aria-label="icon clock">
-                        <use href="./images/icon/symbol-defs.svg#icon-clock"></use>
-                    </svg>
-                </li>
-                <li class="icon-item">
-                    <svg class="logo-icon" width="64" height="64" aria-label="icon diagram">
-                        <use href="./images/icon/symbol-defs.svg#icon-diagram"></use>
-                    </svg>
-                </li>
-                <li class="icon-item">
-                    <svg class="logo-icon" width="64" height="64" aria-label="icon astronaut">
-                        <use href="./images/icon/symbol-defs.svg#icon-astronaut"></use>
-                    </svg>
-                </li>
-            </ul>
             <ul class="container-benefits-list">
                 <li class="container-benefits-item">
+                    <div class="icon-list">
+                            <svg class="logo-icon" width="64" height="64" aria-label="icon antenna">
+                                <use href="/images/symbol-defs.svg#icon-antenna"></use>
+                            </svg>
+                    </div>
                     <h3 class="benefits-list">Strategy</h3>
                     <p class="benefits-list-item">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="container-benefits-item">
-
+                    <div class="icon-list">
+                            <svg class="logo-icon" width="64" height="64" aria-label="icon clock">
+                                <use href="/images/symbol-defs.svg#icon-clock"></use>
+                            </svg>
+                    </div>
                     <h3 class="benefits-list">Punctuality</h3>
                     <p class="benefits-list-item">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="container-benefits-item">
-
+                    <div class="icon-list">
+                            <svg class="logo-icon" width="64" height="64" aria-label="icon diagram">
+                                <use href="/images/symbol-defs.svg#icon-diagram"></use>
+                            </svg>
+                    </div>
                     <h3 class="benefits-list">Diligence</h3>
                     <p class="benefits-list-item">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="container-benefits-item">
-
+                    <div class="icon-list">
+                            <svg class="logo-icon" width="64" height="64" aria-label="icon astronaut">
+                                <use href="/images/symbol-defs.svg#icon-astronaut"></use>
+                            </svg>
+                    </div>
                     <h3 class="benefits-list">Technologies</h3>
                     <p class="benefits-list-item">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -116,24 +111,32 @@
                     </div>
 <ul class="social-link">
     <li class="social-link-item">
+        <a class="social-list nav-link" href="">
         <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
-            <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+            <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
         </svg>
+    </a>
     </li>
     <li class="social-link-item">
+        <a class="social-list nav-link" href="">
         <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
-            <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+            <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
         </svg>
+    </a>
     </li>
     <li class="social-link-item">
+        <a class="social-list nav-link" href="">
         <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
-            <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+            <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
         </svg>
+    </a>
     </li>
     <li class="social-link-item">
+        <a class="social-list nav-link" href="">
         <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
-            <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+            <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
         </svg>
+    </a>
     </li>
 </ul>
                 </li>
@@ -148,24 +151,32 @@
                     </div>
                     <ul class="social-link">
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
                             </svg>
+                        </a>
                         </li>
                     </ul>
                 </li>
@@ -180,24 +191,32 @@
                     </div>
                     <ul class="social-link">
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
                             </svg>
+                        </a>
                         </li>
                     </ul>
                 </li>
@@ -212,23 +231,31 @@
                     </div>
                     <ul class="social-link">
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
                             </svg>
+                        </a>
                         </li>
                         <li class="social-link-item">
+                            <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
-                                <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+                                <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
+                            </a>
                             </svg>
                         </li>
                     </ul>
@@ -342,34 +369,44 @@
 </main>
 <!-- Footer -->
 <footer class="footer">
-    <div class="container">
-        <a href="./index.html" class="logo-footer">Web<span class="logotype-footer">Studio</span></a>
-        <p class="footer-item">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
+    <div class="container footer-desing">
+        <div class="footer-desing-item">
+            <a href="./index.html" class="logo-footer">Web<span class="logotype-footer">Studio</span></a>
+            <p class="footer-item">
+              Increase the flow of customers and sales for your business with digital
+              marketing & growth solutions.
+            </p>
+        </div>
         <div class="footer-link-item">
-            <h3 class="footer-link">Social media</h3>
+            <p class="footer-link">Social media</p>
             <ul class="footer-list">
                 <li class="footer-icon">
-                    <svg class="logo-footer" width="24" height="24" aria-label="logo instagram">
-                        <use href="./images/icon/symbol-defs-1.svg#icon-instagram"></use>
+                    <a href="" class="footer-desing-list">
+                    <svg class="logo-footer-desing" width="24" height="24" aria-label="logo instagram">
+                        <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
                     </svg>
+                </a>
                 </li>
                 <li class="footer-icon">
-                    <svg class="logo-footer" width="24" height="24" aria-label="logo twitter">
-                        <use href="./images/icon/symbol-defs-1.svg#icon-twitter"></use>
+                    <a href="" class="footer-desing-list">
+                    <svg class="logo-footer-desing" width="24" height="24" aria-label="logo twitter">
+                        <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
                     </svg>
+                </a>
                 </li>
                 <li class="footer-icon">
-                    <svg class="logo-footer" width="24" height="24" aria-label="logo facebook">
-                        <use href="./images/icon/symbol-defs-1.svg#icon-facebook"></use>
+                    <a href="" class="footer-desing-list">
+                    <svg class="logo-footer-desing" width="24" height="24" aria-label="logo facebook">
+                        <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
                     </svg>
+                </a>
                 </li>
                 <li class="footer-icon">
-                    <svg class="logo-footer" width="24" height="24" aria-label="logo linkedin">
-                        <use href="./images/icon/symbol-defs-1.svg#icon-linkedin"></use>
+                    <a href="" class="footer-desing-list">
+                    <svg class="logo-footer-desing" width="24" height="24" aria-label="logo linkedin">
+                        <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
                     </svg>
+                </a>
                 </li>
             </ul>
         </div>
@@ -377,3 +414,4 @@
   </footer>
 </body>
 </html>
+
